Changes for Perl extension DBD-SQLite

1.36_01 Tue 29 Nov 2011
    - Enabled SQLITE_ENABLE_FTS4
    - Enabled SQLITE_ENABLE_STAT3

1.35 Tue 29 Nov 2011
    - Updated to SQLite 3.7.9 (ISHIGAKI)
    - One small potential break case if you are using FTS4 and ^

1.34_03 Tue 1 Nov 2011
    - Adding an explicit dynamic_config => 1 (ADAMK)
    - bind_param SQL_INTEGER error now actually dies with RaiseError.
      (ISHIGAKI)

1.34_02 Fri 21 Oct 2011
    *** CHANGES THAT MAY POSSIBLY BREAK YOUR OLD APPLICATIONS ***
    - Resolved #67581: bind_param SQL_INTEGER numifies value;
      Now DBD::SQLite croaks if you explicitly specify datatype
      (with bind_param) and datatype mismatch happens (ISHIGAKI)
    - Datatype set in the bind_param(_array) becomes sticky now
      (as per DBI spec). This potentially affects code depending on
      current undocumented and broken behavior. (Yuriy Kaminskiy)

    - Resolved #71311: binding output columns as SQL_BLOB returns
      nothing (ISHIGAKI)
    - Bsymbolic flag was not portable enough and was not silently
      ignored under MacOSX. Needs to check harder to see if the
      linker supports the option. (ISHIGAKI)
    - Fixed binding named parameters. (Yuriy Kaminskiy)
    - Moved check for bind_ph/is_inout so it always error-out.
      (Yuriy Kaminskiy)
    - Don't set imp_sth->stmt to NULL on error path (Yuriy Kaminskiy)
    - Explained an issue of rollback with unfinished statements.
      (ISHIGAKI)

1.34_01 Thu 22 Sep 2011
    - Updated to SQLite 3.7.8 (ISHIGAKI)
    - Made util/getsqlite.pl work properly for SQLite 3.7.5+ (ISHIGAKI)
    - Cookbook: don't use globals (Yuriy Kaminskiy)
    - Resolved #70135 and hopefully other mod_perl/CentOS issues like
      #63873 and #47983, with a patch by MDOOTSON++ (ISHIGAKI)

1.33 Mon 20 May 2011
    - Production release, no changes from 1.32_04

1.32_04 Fri 20 May 2011
    - Updated to SQLite 3.7.6.3 (ISHIGAKI)
    - Made util/getsqlite.pl state that it needs fixing to work for